--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF7F00</color>
-    <color name="colorPrimaryDark">#FF7F00</color>
-    <color name="colorAccent">#FFF</color>
+    <color name="colorPrimary">#7B1889</color>
+    <color name="colorPrimaryDark">#7B1889</color>
+    <color name="colorAccent">#7B1889</color>
+    <color name="colorBlackTransparant">#7A000000</color>
 </resources>
